--- a/Client/Pages/UserAvatarListAllPage.razor
+++ b/Client/Pages/UserAvatarListAllPage.razor
@@ -21,13 +21,14 @@
             <MudTd> <img src="@context.CoverImage" class="width:100%;" /></MudTd>
             <MudTd><MudButton OnClick="@(() => NavigationManager.NavigateTo($"viewUserAvatar/{context.Id}"))">View</MudButton></MudTd>
             <MudTd><MudButton OnClick="@(() => NavigationManager.NavigateTo($"addUserAvatar/{context.Id}"))">Edit</MudButton></MudTd>
-           
+            <MudTd><MudButton OnClick="@(async () => await SetAvatarActive(context.Name))">Set Active</MudButton></MudTd>
+            <MudTd><MudButton OnClick="@((async () => await DeleteAvatar(context.Name)))">Delete</MudButton></MudTd>
 
         </RowTemplate>
     </MudTable>
 
 
-}
+
 }
 
 @code {
@@ -40,5 +41,17 @@
         } else {
             Snackbar.Add($"Could not get stuff from server. Error: {response.Message}", Severity.Error);
         }
+    }
+    async Task DeleteAvatar(string name) {
+        await UserAvatarLocal.Delete(CurrentUserAvatars.First(x => x.Name == name));
+        var response = await UserAvatars.GetAll();
+        if (response.Success) {
+            CurrentUserAvatars = response.Data;
+        } else {
+            Snackbar.Add($"Could not get stuff from server. Error: {response.Message}", Severity.Error);
+        }
+    }
+    async Task SetAvatarActive(string name) {
+        await UserAvatarLocal.Set(CurrentUserAvatars.First(x => x.Name == name));
     }
 }
