--- a/Client/Components/EditSlideDeck.razor
+++ b/Client/Components/EditSlideDeck.razor
@@ -1,4 +1,7 @@
 ﻿@using Learning.Shared.DbModels
+@using Learning.Shared.Models 
+@inject Learning.Client.Services.ISlideDeckService SlideDeckService
+@inject ISnackbar Snackbar
 
 <MudGrid>
     <MudItem xs="12" sm="6">
@@ -8,7 +11,7 @@
             <MudTextField @bind-Value="SlideDeck.Description" Label="Description" Variant="Variant.Text" Lines="5"></MudTextField>
             @if (!string.IsNullOrWhiteSpace(SlideDeck.CoverImage)) {
                 <div>
-                    <img src="@SlideDeck.CoverImage" class="width:100%;"/>
+                    <img src="@SlideDeck.CoverImage" class="width:100%;" />
 
                 </div>
             }
@@ -16,11 +19,20 @@
             <MudFab HtmlTag="label"
                     Color="Color.Secondary"
                     Icon="@Filled.Image"
-                    Label="Load Cover Image"
+                    Label="Cover Image"
                     for="fileInput" />
+        </MudPaper>
+        <MudPaper Elevation="3" Class="pa-2 mx-2">
 
-            <MudFab Color="Color.Secondary" Icon="@Icons.Material.Add" Size="Size.Small" OnClick="AddSlide" />
-</MudPaper>
+
+            <MudFab HtmlTag="label"
+                    Color="Color.Secondary"
+                    Icon="@Icons.Material.Add"
+                    Label="Add Slide"
+                    OnClick="AddSlide" />
+
+        </MudPaper>
+
         @if (SlideDeck.Slides != null) {
             @foreach (var slide in SlideDeck.Slides) {
                 <MudContainer Class="pa-2 mx-2">
@@ -29,18 +41,60 @@
 
             }
         }
-        <MudPaper Elevation="3" Class="pa-2 mx-2">
-            <MudIconButton Icon="@Icons.Material.Save" OnClick="(() => OnSave.InvokeAsync(SlideDeck))"></MudIconButton>
-        </MudPaper>
+    <MudPaper Elevation="3" Class="pa-2 mx-2">
+        <MudSelect T="string" Label="Access Level" Value="@SlideDeck.AccessLevel.ToString()" ValueChanged="SelectedSlideDeckAccessLevel">
+            <MudSelectItem Value="@("All")" />
+            <MudSelectItem Value="@("Premium")" />
+            <MudSelectItem Value="@("Free")" />
+        </MudSelect>
+        <MudSwitch @bind-Checked="@Label_Switch2" Label="Is published" Color="Color.Primary" />
+        <MudSwitch @bind-Checked="@Label_Switch3" Label="Is deleted" Color="Color.Primary" />
+        <MudIconButton Color="Color.Primary" Icon="@Icons.Material.Save" OnClick="(async () => await SaveClicked())"></MudIconButton>
+    </MudPaper>
     </MudItem>
 </MudGrid>
 @code {
     [Parameter]
     public SlideDeck SlideDeck { get; set; }
-    [Parameter]
-    public EventCallback<SlideDeck> OnSave { get; set; }
+    //[Parameter]
+    //public EventCallback<SlideDeck> OnSave { get; set; } = DefaultOnSave;
     [Parameter]
     public List<Media> Videos { get; set; }
+
+    public bool Label_Switch2 {
+        get {
+            return SlideDeck.IsPublished;
+        }
+        set {
+            if (value) {
+                SlideDeck.Published = DateTime.UtcNow;
+            } else {
+                SlideDeck.Published = DateTime.MinValue;
+            }
+        }
+    }
+    public bool Label_Switch3 {
+        get {
+            return SlideDeck.IsDeleted;
+        }
+        set {
+            SlideDeck.IsDeleted = value;
+        }
+    }
+    void SelectedSlideDeckAccessLevel(string value) {
+        SlideDeck.AccessLevel = (Enums.AccessLevel)Enum.Parse(typeof(Enums.AccessLevel), value);
+        //Entry.SlideDeckId = Entry.SlideDeck.Id;
+
+    }
+
+    async Task SaveClicked() {
+        var response = await SlideDeckService.Save(SlideDeck);
+        if (response.Success) {
+            Snackbar.Add($"Saved", Severity.Success);
+        } else {
+            Snackbar.Add($"Could not save. Error: {response.Message}", Severity.Error);
+        }
+    }
 
     public void AddSlide(MouseEventArgs e) {
         SlideDeck.Slides.Add(new Slide());
