--- a/Client/Pages/EditSlideDeckPage.razor
+++ b/Client/Pages/EditSlideDeckPage.razor
@@ -12,7 +12,7 @@
     <MudSkeleton SkeletonType="SkeletonType.Rectangle" Width="200px" Height="110px" />
     <MudSkeleton SkeletonType="SkeletonType.Rectangle" Width="200px" Height="110px" />
 } else {
-    <Learning.Client.Components.EditSlideDeck SlideDeck="SlideDeck"  Videos="Videos"></Learning.Client.Components.EditSlideDeck>
+    <Learning.Client.Components.EditSlideDeck SlideDeck="SlideDeck"  Videos="Videos" Images="Images"></Learning.Client.Components.EditSlideDeck>
 
     
 }
