--- a/Client/Components/SlideView.razor
+++ b/Client/Components/SlideView.razor
@@ -3,7 +3,7 @@
     <MudText Typo="Typo.body1">@((MarkupString)Slide.TextContent)</MudText>
     @if (!string.IsNullOrWhiteSpace(Slide.ImageUrl)) {
         <br />
-        <img class="rounded m-2" src="@Slide.ImageUrl" style="width:100%; height:100%;" />
+        @*<img class="rounded m-2" src="@Slide.ImageUrl" style="width:100%; height:100%;" />*@
         <img class="rounded m-2" src="@Slide.ImageUrl" style="max-width:100%; max-height:100%;" />
     }
 
