--- a/Client/Components/ViewSlideDeckProgram.razor
+++ b/Client/Components/ViewSlideDeckProgram.razor
@@ -15,23 +15,28 @@
         </MudPaper>
     </MudItem>
     <MudItem xs="12">
-        
-
-       
-    </MudItem>
-    <MudItem xs="12" sm="6">
+        @if (entry != null) {
+        <MudPaper Elevation="3" Class="pa-2 mx-2">
+                <Learning.Client.Components.SlideDeckView SlideDeck="entry.SlideDeck"></Learning.Client.Components.SlideDeckView>
+        </MudPaper>
+                }
+        </MudItem>
+    <MudItem xs="12">
         <MudPaper Elevation="3" Class="pa-2 mx-2">
             @if (entry != null) {
                 <MudText Typo="Typo.body1">
                     Entry: @entry.SlideDeck.Title
                 </MudText>
                 <MudText Typo="Typo.body1">
-                    Duration: @Count / @entry.Duration
+                    Duration: @TimeLeft / @entry.Duration
                 </MudText>
                 <MudText Typo="Typo.body1">
-                    Entry: @entryIndex / @SlideDeckProgram.Entries.Count
+                    At entry of total: @entryIndex / @SlideDeckProgram.Entries.Count
                 </MudText>
 
+                <br />
+                <br />
+                <br />
                 <MudToggleIconButton Toggled="@IsPlaying"
                                      Icon="@Icons.Material.PlayArrow" Color="@Color.Primary"
                                      ToggledIcon="@Icons.Material.Pause" ToggledColor="@Color.Secondary"
@@ -44,13 +49,7 @@
 
     </MudItem>
 
-    <MudItem xs="12" sm="6">
-            @if (entry != null) {
-                <MudContainer Class="pa-2 mx-2 blue-grey darken-4" >
-                    <Learning.Client.Components.SlideDeckView SlideDeck="entry.SlideDeck"></Learning.Client.Components.SlideDeckView>
-                </MudContainer>
-            }
-    </MudItem>
+
 </MudGrid>
 
 @code {
@@ -63,6 +62,7 @@
     public bool IsPlaying { get; private set; }
     public bool HaveCompleted { get; private set; }
 
+    int TimeLeft { get { return (entry == null) ? 0 : entry.Duration - Count; } }
     int Count;
     int entryIndex;
 
