--- a/Client/Components/EditSlideDeckProgramEntry.razor
+++ b/Client/Components/EditSlideDeckProgramEntry.razor
@@ -20,7 +20,7 @@
 
 
 
-<MudIconButton Icon="@Icons.Material.Delete" OnClick="@(() => OnDelete.InvokeAsync(Entry))"></MudIconButton>
+<MudIconButton Icon="@Icons.Material.Filled.Delete" OnClick="@(() => OnDelete.InvokeAsync(Entry))"></MudIconButton>
 @code {
     [Parameter]
     public SlideDeckProgramEntry Entry { get; set; }
