--- a/Client/Components/ViewSlideDeckProgram.razor
+++ b/Client/Components/ViewSlideDeckProgram.razor
@@ -38,8 +38,8 @@
                 <br />
                 <br />
                 <MudToggleIconButton Toggled="@IsPlaying"
-                                     Icon="@Icons.Material.PlayArrow" Color="@Color.Primary"
-                                     ToggledIcon="@Icons.Material.Pause" ToggledColor="@Color.Secondary"
+                                     Icon="@Icons.Material.Filled.PlayArrow" Color="@Color.Primary"
+                                     ToggledIcon="@Icons.Material.Filled.Pause" ToggledColor="@Color.Secondary"
                                      ToggledChanged="(toggleValue) => IncrementSwitchedOn(toggleValue)"
                                      Size="Size.Large"
                                      ToggledSize="Size.Large" />
