--- a/Client/Shared/MyCoolLayout.razor
+++ b/Client/Shared/MyCoolLayout.razor
@@ -1,7 +1,9 @@
 ﻿@inherits LayoutComponentBase
+    <div class="page">
+        <div class="content px-4" style="margin:auto; width:50%;">
+            @Body
+            @code {
 
-<h3>MyCoolLayout</h3>
-@Body
-@code {
-
-}
+            }
+        </div>
+    </div>
